# cetCase

./: .gitignore  CASE.md  pyproject.toml
src/case/: Data for assignment.py  eda.py  strategy.py
